kubernetes-ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  # choose the same namespace maybe as the related service and pod
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    # should be a valid domain name address 
    # should be mapped to entrypoint ip address of node
    # or should be mapped to server outside, which is the entrypoint
  - host: dashboard.com
    http:
      # means url path
      paths:
      - path: /
        pathType: Exact  
        backend:
          service:
            # internal service name
            name: kubernetes-dashboard
            port: 
              # internal service port
              number: 80
